--- a/05_third_party/03_llvm/CMakeLists.txt
+++ b/05_third_party/03_llvm/CMakeLists.txt
@@ -1,3 +1,3 @@
 project (build_llvm)
 
-add_custom_target(build_llvm WORKING_DIRECTORY ${yassi_nextgen_SOURCE_DIR}/05_third_party/03_llvm COMMAND ./install_llvm.sh)
+add_custom_target(build_llvm WORKING_DIRECTORY ${yassi_root_SOURCE_DIR}/05_third_party/03_llvm COMMAND ./install_llvm.sh)
